# Inteli-College-2024-2B-T08-EC08-G04

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: test-deploy.yaml
docs/: docusaurus.config.ts
docs/docs/: sprints.md
docs/docs/Sprint 2/: lgpd.md  onboarding.md
docs/docs/Sprint 3/: api_robot.md
docs/docs/Sprint 4/: acessibilidade.md  chatbot.md  interface.md  teste.md
docs/docs/Sprint 5/: chatbot.md  como-utilizar.md  interface_final.md  requisitos_atendidos.md  roadmap.md  servico-banco-dados.md  servico-llm.md  servico-robo.md  speech_flow.md
docs/src/css/: custom.css
docs/src/pages/: index.tsx
src/: docker-compose.yml
src/backend/api_robot/: main.py
src/backend/llm_service/: Dockerfile  requirements.txt
src/database/: app.js  connection.js  index.js  package-lock.json  package.json  server.js
src/database/controllers/: userController.js
src/database/middlewares/: authMiddleware.js
src/database/routes/: userRoutes.js
src/database/services/: supabaseClient.js
src/frontend/: dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
src/frontend/src/: App.tsx  index.css  main.tsx
src/map/: map.pgm
src/rasa_chatbot/: Dockerfile  config.yml  domain.yml  entrypoint.sh  graph.html  user_data.json
src/rasa_chatbot/actions/: actions.py
src/rasa_chatbot/data/: nlu.yml  rules.yml  stories.yml
src/rasa_chatbot/results/: story_report.json
src/rasa_chatbot/tests/: test_stories.yml
src/workspace/: requirements.txt
src/workspace/jarbas/: CMakeLists.txt  package.xml
(+69 files in other folders)
